add some icon for app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">AfetKurtar</string>
+
+    <string name="app_name" background="#FF6200EE" color="#FF6200EE">AfetKurtar </string>
 </resources>
