--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
 
     <string name="app_name" background="#FF6200EE" color="#FF6200EE">AfetKurtar </string>
+    <string name="g_n_ll_kat_l_m_talebi">Gönüllü Katılım Talebi</string>
+    <string name="acil_hbar">Acil İhbar</string>
 </resources>
